crates/nash-parse/src/snapshots/nash_parse__number__tests__error_dirty_end.snap
---
source: crates/nash-parse/src/number.rs
description: "Code:\n\n123abc"
---
Number(
    End,
    1,
    4,
)
