crates/nash-parse/src/snapshots/nash_parse__number__tests__error_hex_bad_digit.snap
---
source: crates/nash-parse/src/number.rs
description: "Code:\n\n0xGG"
---
Number(
    HexDigit,
    1,
    3,
)
