crates/nash-parse/src/snapshots/nash_parse__number__tests__error_hex_dirty_end.snap
---
source: crates/nash-parse/src/number.rs
description: "Code:\n\n0x1G"
---
Number(
    HexDigit,
    1,
    4,
)
