crates/nash-parse/src/snapshots/nash_parse__number__tests__error_hex_no_digits.snap
---
source: crates/nash-parse/src/number.rs
description: "Code:\n\n0x"
---
Number(
    HexDigit,
    1,
    3,
)
