crates/nash-parse/src/snapshots/nash_parse__number__tests__error_leading_zero.snap
---
source: crates/nash-parse/src/number.rs
description: "Code:\n\n007"
---
Number(
    NoLeadingZero,
    1,
    2,
)
