crates/nash-parse/src/snapshots/nash_parse__number__tests__error_leading_zeros.snap
---
source: crates/nash-parse/src/number.rs
description: "Code:\n\n00"
---
Number(
    NoLeadingZero,
    1,
    2,
)
