crates/nash-parse/src/snapshots/nash_parse__number__tests__error_not_a_number.snap
---
source: crates/nash-parse/src/number.rs
description: "Code:\n\nabc"
---
Expected(
    1,
    1,
)
