crates/nash-parse/src/snapshots/nash_parse__number__tests__error_zero_dirty_end.snap
---
source: crates/nash-parse/src/number.rs
description: "Code:\n\n0abc"
---
Number(
    End,
    1,
    2,
)
